--- a/jsyy-parent/service/service-msm/src/main/resources/application.properties
+++ b/jsyy-parent/service/service-msm/src/main/resources/application.properties
@@ -19,10 +19,10 @@ spring.redis.lettuce.pool.max-wait=-1
 # nacos\u670D\u52A1\u5730\u5740
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 # \u5BB9\u8054\u4E91\u7684\u914D\u7F6E
-cloopen.sms.accountSId=xxx
-cloopen.sms.accountToken=xxx
-cloopen.sms.appId=xxx
-#rabbitmq\u5730\u5740
+cloopen.sms.accountSId=8aaf07087bc82708017bf1f2aeb90b94
+cloopen.sms.accountToken=145b20f3ed29410181839addcb89fdce
+cloopen.sms.appId=8aaf07087bc82708017bf1f2afb30b9a
+# rabbitmq\u914D\u7F6E
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
