--- a/jsyy-parent/service/service-user/src/main/resources/application.properties
+++ b/jsyy-parent/service/service-user/src/main/resources/application.properties
@@ -9,6 +9,10 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/jsyy_user?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=lzq2686105
+# mongodb\u914D\u7F6E
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=jsyy
 # json\u6570\u636E\u914D\u7F6E
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
