--- a/jsyy-parent/service-client/pom.xml
+++ b/jsyy-parent/service-client/pom.xml
@@ -10,16 +10,22 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>service-client</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>service-cmn-client</module>
+    </modules>
 
     <dependencies>
         <dependency>
             <groupId>org.example</groupId>
             <artifactId>common-util</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>org.example</groupId>
             <artifactId>model</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
