--- a/jsyy-parent/service/service-task/pom.xml
+++ b/jsyy-parent/service/service-task/pom.xml
@@ -11,9 +11,12 @@
 
     <artifactId>service-task</artifactId>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>rabbit-util</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
