--- a/jsyy-parent/service/service-order/src/main/resources/application.properties
+++ b/jsyy-parent/service/service-order/src/main/resources/application.properties
@@ -23,3 +23,12 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+# \u5FAE\u4FE1appid
+weixin.appid=wx74862e0dfcf69954
+# \u5FAE\u4FE1\u5546\u6237\u53F7
+weixin.partner=1558950191
+# \u5FAE\u4FE1\u5546\u6237key
+weixin.partnerkey=T6m9iK73b0kn9g5v426MKfHQH7X8rKwb
+# \u9000\u6B3E\u8BC1\u4E66
+weixin.cert=E:\\javaStudy\\yygh_parent\\service\\service_order\\src\\main\\resources\\cert\\apiclient_cert.p12
+spring.main.allow-bean-definition-overriding=true
