--- a/jsyy-parent/service/service-cmn/pom.xml
+++ b/jsyy-parent/service/service-cmn/pom.xml
@@ -21,6 +21,10 @@
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb</artifactId>
+        </dependency>
     </dependencies>
 
 
