--- a/jsyy-parent/service/service-msm/src/main/resources/application.properties
+++ b/jsyy-parent/service/service-msm/src/main/resources/application.properties
@@ -2,7 +2,12 @@
 server.port=8203
 # \u670D\u52A1\u540D
 spring.application.name=service-msm
-#\u8FD4\u56DEjson\u7684\u5168\u5C40\u65F6\u95F4\u683C\u5F0F
+# mysql\u914D\u7F6E
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/jsyy_cmn?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=lzq2686105
+# json\u6570\u636E\u914D\u7F6E
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 # redis\u914D\u7F6E
@@ -14,16 +19,18 @@ spring.redis.jedis.pool.max-active=20
 spring.redis.jedis.pool.max-wait=-1
 spring.redis.jedis.pool.max-idle=10
 spring.redis.jedis.pool.min-idle=0
-spring.redis.lettuce.pool.max-active=20
-spring.redis.lettuce.pool.max-wait=-1
+spring.redis.timeout=1000
+# mapper.xml\u8DEF\u5F84\u914D\u7F6E
+mybatis-plus.mapper-locations=classpath:xml/*.xml
 # nacos\u670D\u52A1\u5730\u5740
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
-# \u5BB9\u8054\u4E91\u7684\u914D\u7F6E
-cloopen.sms.accountSId=8aaf07087bc82708017bf1f2aeb90b94
-cloopen.sms.accountToken=145b20f3ed29410181839addcb89fdce
-cloopen.sms.appId=8aaf07087bc82708017bf1f2afb30b9a
-# rabbitmq\u914D\u7F6E
-spring.rabbitmq.host=localhost
+#\u5F00\u542Fsentinel
+feign.sentinel.enabled=true
+#\u8BBE\u7F6Esentinel\u5730\u5740
+spring.cloud.sentinel.transport.dashboard=http://127.0.0.1:8858
+#rabbitmq\u5730\u5740
+spring.rabbitmq.host=127.0.0.1
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
