--- a/jsyy-parent/service/service-msm/src/main/resources/application.properties
+++ b/jsyy-parent/service/service-msm/src/main/resources/application.properties
@@ -2,35 +2,27 @@
 server.port=8203
 # \u670D\u52A1\u540D
 spring.application.name=service-msm
-# mysql\u914D\u7F6E
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/jsyy_cmn?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=lzq2686105
-# json\u6570\u636E\u914D\u7F6E
+#\u8FD4\u56DEjson\u7684\u5168\u5C40\u65F6\u95F4\u683C\u5F0F
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 # redis\u914D\u7F6E
-spring.redis.database=0
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
-spring.redis.password=
-spring.redis.jedis.pool.max-active=20
-spring.redis.jedis.pool.max-wait=-1
-spring.redis.jedis.pool.max-idle=10
-spring.redis.jedis.pool.min-idle=0
-spring.redis.timeout=1000
-# mapper.xml\u8DEF\u5F84\u914D\u7F6E
-mybatis-plus.mapper-locations=classpath:xml/*.xml
+spring.redis.database=0
+spring.redis.timeout=1800000
+spring.redis.lettuce.pool.max-active=20
+spring.redis.lettuce.pool.max-wait=-1
+#\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4(\u8D1F\u6570\u8868\u793A\u6CA1\u9650\u5236)
+spring.redis.lettuce.pool.max-idle=8
+spring.redis.lettuce.pool.min-idle=0
 # nacos\u670D\u52A1\u5730\u5740
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
-#\u5F00\u542Fsentinel
-feign.sentinel.enabled=true
-#\u8BBE\u7F6Esentinel\u5730\u5740
-spring.cloud.sentinel.transport.dashboard=http://127.0.0.1:8858
+# \u81EA\u5DF1\u5BB9\u8054\u4E91\u7684\u4FE1\u606F
+cloopen.sms.accountSId=xxx
+cloopen.sms.accountToken=xxx
+cloopen.sms.appId=xxx
 #rabbitmq\u5730\u5740
-spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-
