--- a/jsyy-parent/service-gateway/src/main/resources/application.properties
+++ b/jsyy-parent/service-gateway/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 server.port=80
 # \u670D\u52A1\u540D
 spring.application.name=service-gateway
+spring.profiles.active=dev
 # nacos\u670D\u52A1\u5730\u5740
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 #\u4F7F\u7528\u670D\u52A1\u53D1\u73B0\u8DEF\u7531
