--- a/jsyy-parent/service/service-msm/src/main/resources/application.properties
+++ b/jsyy-parent/service/service-msm/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 server.port=8203
 # \u670D\u52A1\u540D
 spring.application.name=service-msm
+# \u73AF\u5883\u8BBE\u7F6E\uFF1Adev\u3001test\u3001prod
+spring.profiles.active=dev
 #\u8FD4\u56DEjson\u7684\u5168\u5C40\u65F6\u95F4\u683C\u5F0F
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
