--- a/jsyy-parent/service/service-order/src/main/resources/application.properties
+++ b/jsyy-parent/service/service-order/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 server.port=8204
 # \u670D\u52A1\u540D
 spring.application.name=service-order
+spring.profiles.active=dev
 # mysql\u914D\u7F6E
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/jsyy_order?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
