--- a/jsyy-parent/service/service-cmn/src/main/resources/application.properties
+++ b/jsyy-parent/service/service-cmn/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 # redis\u914D\u7F6E
 spring.redis.database=0
-spring.redis.host=127.0.0.1
+spring.redis.host=101.35.181.165
 spring.redis.port=6379
 spring.redis.password=
 spring.redis.jedis.pool.max-active=20
@@ -25,15 +25,15 @@ spring.redis.timeout=1000
 # mapper.xml\u8DEF\u5F84\u914D\u7F6E
 mybatis-plus.mapper-locations=classpath:xml/*.xml
 # nacos\u670D\u52A1\u5730\u5740
-spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+spring.cloud.nacos.discovery.server-addr=101.35.181.165:8848
 #\u5F00\u542Fsentinel
 feign.sentinel.enabled=true
 #\u8BBE\u7F6Esentinel\u5730\u5740
 spring.cloud.sentinel.transport.dashboard=http://127.0.0.1:8858
 #rabbitmq\u5730\u5740
-spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.host=101.35.181.165
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.username=root
+spring.rabbitmq.password=root
 #\u5141\u8BB8\u5B58\u5728\u591A\u4E2AFeign\u8C03\u7528\u76F8\u540CService\u7684\u63A5\u53E3
 spring.main.allow-bean-definition-overriding=true
