--- a/jsyy-parent/service/service-msm/src/main/resources/application.properties
+++ b/jsyy-parent/service/service-msm/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.profiles.active=dev
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 # redis\u914D\u7F6E
-spring.redis.host=127.0.0.1
+spring.redis.host=101.35.181.165
 spring.redis.port=6379
 spring.redis.database=0
 spring.redis.timeout=1800000
@@ -18,13 +18,13 @@ spring.redis.lettuce.pool.max-wait=-1
 spring.redis.lettuce.pool.max-idle=8
 spring.redis.lettuce.pool.min-idle=0
 # nacos\u670D\u52A1\u5730\u5740
-spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+spring.cloud.nacos.discovery.server-addr=101.35.181.165:8848
 # \u5BB9\u8054\u4E91\u914D\u7F6E
 cloopen.sms.accountSId=8aaf07087bc82708017bf1f2aeb90b94
 cloopen.sms.accountToken=145b20f3ed29410181839addcb89fdce
 cloopen.sms.appId=8aaf07087bc82708017bf1f2afb30b9a
 #rabbitmq\u5730\u5740
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=101.35.181.165
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.username=root
+spring.rabbitmq.password=root
