--- a/jsyy-parent/service/service-order/src/main/resources/application.yml
+++ b/jsyy-parent/service/service-order/src/main/resources/application.yml
@@ -11,30 +11,27 @@ spring:
     url: jdbc:mysql://localhost:3306/jsyy_order?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
     username: root
     password: lzq2686105
+
   # 返回json的全局时间格式
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
+
   # redis配置
   redis:
     database: 0
     host: 101.35.181.165
     port: 6379
-    jedis:
-      pool:
-        max-active: 20
-        max-wait: -1
-        max-idle: 10
-        min-idle: 0
-    lettuce:
-      pool:
-        max-active: 20
-        max-wait: -1
+
   # nacos配置
   cloud:
     nacos:
       discovery:
         server-addr: 101.35.181.165:8848
+    # sentinel配置
+    sentinel:
+      transport:
+        dashboard: localhost:8080
 
   # rabbitmq配置
   rabbitmq:
@@ -46,6 +43,19 @@ spring:
   # 允许存在多个Feign调用相同Service的接口
   main:
     allow-bean-definition-overriding: true
+
+# openfeign配置sentinel
+feign:
+  sentinel:
+    enabled: true
+
+# mapper.xml路径配置
+mybatis-plus:
+  mapper-locations: classpath:xml/*.xml
+  global-config:
+    db-config:
+      logic-delete-value: 1 # 逻辑已删除值(默认为 1)
+      logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
 
 # 微信配置
 weixin:
