--- a/jsyy-parent/service/service-cmn/src/main/resources/application.yml
+++ b/jsyy-parent/service/service-cmn/src/main/resources/application.yml
@@ -13,9 +13,9 @@ spring:
   # mysql配置
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/jsyy_user?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://101.35.181.165:3306/jsyy_cmn?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
     username: root
-    password: lzq2686105
+    password: root
 
   # json数据配置
   jackson:
@@ -37,7 +37,7 @@ spring:
     # sentinel配置
     sentinel:
       transport:
-        dashboard: localhost:8080
+        dashboard: 101.35.181.165:8858
   # rabbitmq地址
   rabbitmq:
     host: 101.35.181.165
