--- a/jsyy-parent/service/service-order/src/main/resources/application.yml
+++ b/jsyy-parent/service/service-order/src/main/resources/application.yml
@@ -8,9 +8,9 @@ spring:
   # mysql配置
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/jsyy_order?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://101.35.181.165:3306/jsyy_order?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
     username: root
-    password: lzq2686105
+    password: root
 
   # 返回json的全局时间格式
   jackson:
@@ -31,7 +31,7 @@ spring:
     # sentinel配置
     sentinel:
       transport:
-        dashboard: localhost:8080
+        dashboard: 101.35.181.165:8858
 
   # rabbitmq配置
   rabbitmq:
