--- a/jsyy-parent/service/service-task/src/main/resources/application.yml
+++ b/jsyy-parent/service/service-task/src/main/resources/application.yml
@@ -15,11 +15,11 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 127.0.0.1:8848
+        server-addr: 101.35.181.165:8848
 
-  #rabbitmq地址
+  # rabbitmq配置
   rabbitmq:
-    host: localhost
-    port: 15672
-    username: guest
-    password: guest
+    host: 101.35.181.165
+    port: 5672
+    username: root
+    password: root
